# trading-playbook

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  QUICKSTART.md  README.md  analyze_market_data.py  backtest.py  compare_exit_optimization_2025.py  compare_exits_6month.py  compare_scanner_params_2025.py  find_winning_pattern.py  pyproject.toml  run_backtest_wider_stop.py  run_wed_tue_backtest.py  test_3month_verification.py  test_alpaca_data.py  test_data_fetcher.py
.claude/: settings.local.json
docs/: BACKTEST_GUIDE.md  STRATEGY_THESIS.md
long-edge/: .env.example  .gitignore  INTERFACE_STANDARDIZATION_PROGRESS.md  LICENSE  PROGRESS_SUMMARY.md  README.md  REGULATIONS.md  SETUP_STATUS.md  TEST_RESULTS_TRACKER.md  analyze_actual_trades.py  backtest_jan2025.json  bear_market_2022_results.json  control.sh  debug_scoring.py  hybrid_trailing_results.json  let_winners_run_results.json  q2_2024_results.json  q2_2025_results.json  run_all_backtests.sh  smart_exits_results.json  strategy_test.json  test_volume_all_approaches.py  test_volume_comprehensive.py  test_volume_filter_075.py  test_volume_quick.py
momentum-hunter/: .gitignore  3_month_sequential_results.json  AUTO_START_GUIDE.md  BACKTEST_ANALYSIS.md  DAILY_STRATEGY_ANALYSIS.md  MORNING_BRIEFING.md  PROGRESS.md  README.md  SESSION_HISTORY.md  annualized_returns.json  check_data_access.sh  final_validation_results.json  monitor.py  run.py  start_trading.sh  step2_ema20_results.json  test_backtest.json
tests/: test_composable_engine.py  test_exit_strategy.py  test_interface_integration.py  (+1 more)
(+172 files in other folders)
